# allerscan

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  db.sqlite3  manage.py  requirements.txt
Food_Scanner/: main.py
aller_scan/: .gitignore  apps.py  foodscanner.py  models.py  urls.py  views.py
aller_scan/static/aller_scan/: AllerScan.fig  styles.css  styles.css.map  styles.scss
aller_scan/templates/aller_scan/: about.html  index.html  layout.html  results.html  scan.html
allerscan/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
food_scanner_module/: pyproject.toml
food_scanner_module/python/: setup.py
src/: lib.rs
